--- a/gradle.properties
+++ b/gradle.properties
@@ -19,3 +19,8 @@ android.useAndroidX=true
 android.enableJetifier=true
 # Kotlin code style for this project: "official" or "obsolete":
 kotlin.code.style=official
+
+KEY_PATH=./jks/zy.jks
+KEY_PWD=zhaoyue77867
+ALIAS_NAME=zy
+ALIAS_PWD=zhaoyue77867
